# ai-course2-regina-2025

./: .gitignore  README.md  ai-course2-regina-2025
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: pyproject.toml  report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW05/: HW05.ipynb  S05-hw-dataset.csv
homeworks/HW05/artifacts/: model_comparison.csv
homeworks/HW06/: HW06.ipynb  S06-demo-02-bagging-random-forest.ipynb  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.csv  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  README_HW07.md  report.md  requirements.txt
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW14/: HW14.ipynb  report.md
project/: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  report.md  requirements.txt  self-checklist.md
project/configs/: .env.example  config.yaml
project/data/: download_data.py
project/notebooks/: 01_eda_and_models.ipynb
project/src/: app.py  predict.py  train.py
project/tests/: test_api.py  test_predict.py
(+14 files in other folders)
