[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-cli"
version = "0.1.0"
description = "Mini EDA CLI tool for data analysis"
authors = [
    {name = "Regina Sadykova", email = "regww_s@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scipy>=1.9.0",
    "click>=8.1.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
